[package]
name = "gprdeps"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.5.2", features = ["color"] }     # command line parsing
thiserror = { version = "1.0.50" }
lazy_static = "1.4.0"
# threadpool = "1.8.1"
path-clean = "1.0.1"
petgraph = "0.6.4"
ustr = "0.10.0"
walkdir = "2.4.0"
itertools = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"] }
